@@ -196,6 +196,7 @@ task ktlint(type: JavaExec, group: "verification") {
     classpath = configurations.ktlint
     mainClass.set("com.pinterest.ktlint.Main")
     args "src/**/*.kt"
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 check.dependsOn ktlint
 
@@ -204,4 +205,5 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     classpath = configurations.ktlint
     mainClass.set("com.pinterest.ktlint.Main")
     args "-F", "src/**/*.kt"
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
